--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,14 @@ flask-cors==4.0.0
 diskcache==5.6.3
 html2text==2024.2.26
 langchain-openai==0.1.3
+py3langid==0.2.2
+zhipuai==2.0.1
+pymupdf==1.24.2
+mammoth==1.7.1
+python-pptx==0.6.23
+pandas==2.2.1
+tabulate==0.9.0
+aiofiles==23.2.1
+tokenizers==0.15.2
+onnxruntime==1.16.3
+numpy==1.26.4
