--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,7 @@ aiofiles==23.2.1
 tokenizers==0.15.2
 onnxruntime==1.16.3
 numpy==1.26.4
+et-xmlfile==1.1.0
 openpyxl==3.1.2
+llama-index==0.10.43
+llama-parse==0.4.4
